--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "node-api",
-  "main": "server.js",
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.14.2",
-    "express": "^4.13.3",
-    "mongoose": "^4.3.4",
-    "morgan": "^1.6.1"
-  }
+    "name": "node-api",
+    "main": "server.js",
+    "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "^1.14.2",
+        "express": "^4.13.3",
+        "mongoose": "^4.3.4",
+        "morgan": "^1.6.1"
+    },
+    "license": "MIT",
+    "repository": "https://github.com/gjbogaerts/mean-crm.git"
 }
